# zephyr-examples-git

./: .gitignore  README.md
blinky_rtt_f411re_bmp/: CMakeLists.txt  prj.conf
blinky_rtt_f411re_bmp/boards/arm/nucleo_f411re_bmp/: Kconfig.defconfig  Kconfig.nucleo_f411re_bmp  board.cmake  board.yml  nucleo_f411re_bmp.dts  nucleo_f411re_bmp.yaml
blinky_rtt_f411re_bmp/src/: main.c
spi_shell_nrf52/: app.overlay  prj.conf
spi_shell_nrf52/src/: main.c
stepper_samd21/: CMakeLists.txt  prj.conf
stepper_samd21/boards/: samd21_xpro.overlay
stepper_samd21/src/: main.c
